    decoder plugin, the option only controls the extra FLAC plugin that uses
    libFLAC both for demuxing and decoding.
  * Implement a WavPack files demuxer, using WavPack library (only for demuxing
    as the decoding is left entirely to FFmpeg); it's still in its infancy, but
    it should be possible to remove WavPack dependency entirely in the future.

xine-lib (1.1.3)
  * Security fixes:
    - Heap overflow in libmms (related to CVE-2006-2200)
    - Buffer overrun in Real Media input plugin. [bug #1603458]
      Thanks to Roland Kay for reporting and JW for the patch.
  * Update build system to support x86 Darwin setups, and merge patches to
    support Darwin OS better.
  * Replace custom ALSA check with pkg-config check, and make sure 0.9.0 is
    the requried version.
  * When the compiler supports it, enable hidden visibility for all the
    plugins to export only the plugin info entry (and eventual needed
    special functions), to replace the min-symtab option that wasn't working.
  * Add "m4b" to the list of supported file extensions for the Qt demuxer, to
    allow playing (unprotected) audiobooks in AAC format.
  * Remove --disable-fpic hack, prefer using --without-pic instead.
  * Add new output plugin: PulseAudio (based on PolypAudio plugin), that uses
    0.9 API (PulseAudio is PolypAudio renamed).
  * Remove PolypAudio plugin, latest version supported 0.7 API that is no more
    supported by upstream, and it's replaced by PulseAudio.
  * Allow 0 for DVD title/chapter (navigation or full title).
  * New experimental JACK audio driver.
  * Fix switch from alsa/dmix 2.0 to 5.1 [bug #1226595]
  * Don't use proxy for localhost connection. [bug #1553633]
  * Use mmap() to open local files if available.
  * Use pkg-config to look for external FFmpeg.
  * Allow FFmpeg to play MP3s in case MAD is not present.
  * Reduce the dead time when trying to connect to dead hosts, by falling back