@@ -39,6 +39,7 @@ xine-lib (1.1.4)
   * Implement a WavPack files demuxer, using WavPack library (only for demuxing
     as the decoding is left entirely to FFmpeg); it's still in its infancy, but
     it should be possible to remove WavPack dependency entirely in the future.
+  * Implement a True Audio files demuxer. [bug #1586381]
 
 xine-lib (1.1.3)
   * Security fixes:
